--- a/src/app.postcss
+++ b/src/app.postcss
@@ -96,6 +96,10 @@
     .link {
         @apply text-blue-600 hover:text-blue-800 hover:underline;
     }
+
+    .cm-gutters {
+        @apply !bg-background;
+    }
 }
 
 .kh-shadow-1 { box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.12), 0 1px 5px 0 rgba(0, 0, 0, 0.2); }
