--- a/src/app.postcss
+++ b/src/app.postcss
@@ -76,20 +76,42 @@
         @apply bg-background text-foreground;
     }
 
-    .markdown-body ul,
-    .markdown-body ol {
-        list-style: revert;
-        margin: revert;
-        padding: revert;
-    }
-
     .link {
         @apply text-blue-600 hover:text-blue-800 hover:underline;
     }
-
-    .cm-gutters {
-        @apply !bg-background;
+    
+    /* BEGIN COMPILED MARKDOWN STYLES */
+    .markdown-body {
+        ul,
+        ol {
+            list-style: revert;
+            margin: revert;
+            padding: revert;
+        }
+    
+        .collapsible-summary {
+            @apply flex items-center gap-1;
+    
+            &::marker {
+                content: '';
+            }
+        }
+    
+        .collapsible-icon {
+            @apply transform rotate-0 transition-transform duration-100 opacity-0 text-primary/40;
+    
+            details[open] & {
+                @apply rotate-90;
+            }
+    
+            .collapsible-summary:hover & {
+                @apply opacity-100;
+            }
+        }
+    
+        .collapsible-content {
+            @apply pl-5 border-l-2 border-primary/10;
+        }
     }
+    /* END COMPILED MARKDOWN STYLES */
 }
-
-.kh-shadow-1 { box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.12), 0 1px 5px 0 rgba(0, 0, 0, 0.2); }
