--- a/src/app.postcss
+++ b/src/app.postcss
@@ -47,8 +47,10 @@
         --card-foreground: 0 0% 98%;
         --popover: 240 10% 3.9%;
         --popover-foreground: 0 0% 98%;
-        --primary: 216 27% 80%;
-        --primary-foreground: 240 5.9% 10%;
+        --primary: 209 100% 70%;
+        --primary-foreground: 210 40% 98%;
+        /* --primary: 216 27% 80%;
+        --primary-foreground: 240 5.9% 10%; */
         --secondary: 207 14% 16%;
         --secondary-foreground: 0 0% 98%;
         --muted: 240 3.7% 15.9%;
